--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     <div class="w-16 h-16 bg-red-100 rounded-full flex items-center justify-center mb-6">
                         <i class="fas fa-spa text-red-600 text-3xl"></i>
                     </div>
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Buboko Maalaa (Wedding Garland)</h3>
+                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Duboko Maalaa (Wedding Garland)</h3>
                     <p class="text-gray-600 mb-6">
                         Beautiful traditional wedding garlands crafted with fresh flowers for your sacred ceremony.
                     </p>
