Update 5 remove lead

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                             </div>
                         </div>
                         <h3 class="text-3xl font-bold text-gray-900 mb-2">Rameshwar Karki</h3>
-                        <p class="text-red-600 font-semibold text-lg mb-4">Lead Cinematographer & Videographer</p>
+                        <p class="text-red-600 font-semibold text-lg mb-4">Cinematographer & Videographer</p>
                         <a href="https://www.imdb.com/name/nm8825001/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-gray-700 hover:text-red-600 transition-colors mb-6">
                             <i class="fab fa-imdb text-3xl mr-2"></i>
                             <span class="text-sm font-semibold">View IMDB Profile</span>
@@ -627,7 +627,7 @@
                             </div>
                         </div>
                         <h3 class="text-3xl font-bold text-gray-900 mb-2">Bijay Shrestha</h3>
-                        <p class="text-red-600 font-semibold text-lg mb-6">Lead Photographer & Creative Director</p>
+                        <p class="text-red-600 font-semibold text-lg mb-6">Photographer & Creative Director</p>
                     </div>
                     <div class="space-y-4 text-gray-600">
                         <p class="leading-relaxed">
@@ -676,7 +676,7 @@
                             </div>
                         </div>
                         <h3 class="text-3xl font-bold text-gray-900 mb-2">Sunita Bhandari Karki</h3>
-                        <p class="text-red-600 font-semibold text-lg mb-6">Lead Decoration Artist</p>
+                        <p class="text-red-600 font-semibold text-lg mb-6">Decoration Artist</p>
                     </div>
                     <div class="space-y-4 text-gray-600">
                         <p class="leading-relaxed">
@@ -725,7 +725,7 @@
                             </div>
                         </div>
                         <h3 class="text-3xl font-bold text-gray-900 mb-2">Sajana Shrestha</h3>
-                        <p class="text-red-600 font-semibold text-lg mb-6">Lead Balloon Decoration Artist</p>
+                        <p class="text-red-600 font-semibold text-lg mb-6">Balloon Decoration Artist</p>
                     </div>
                     <div class="space-y-4 text-gray-600">
                         <p class="leading-relaxed">
