--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                             </div>
                         </div>
                         <h3 class="text-3xl font-bold text-gray-900 mb-2">Bijay Shrestha</h3>
-                        <p class="text-red-600 font-semibold text-lg mb-6">Photographer & Creative Director</p>
+                        <p class="text-red-600 font-semibold text-lg mb-6">Photographer & Editor</p>
                     </div>
                     <div class="space-y-4 text-gray-600">
                         <p class="leading-relaxed">
