--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -73,7 +73,7 @@
                 <!-- Contact Form -->
                 <div data-aos="fade-right">
                     <h2 class="font-display text-3xl font-bold text-gray-900 mb-6">Send Us a Message</h2>
-                    <form class="space-y-6" id="contact-form">
+                    <form class="space-y-6" id="contact-form" method="POST">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
                                 <label class="block text-sm font-medium text-gray-700 mb-2">First Name *</label>
@@ -90,7 +90,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Phone</label>
-                            <input type="tel" name="phone" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="+1 (555) 000-0000">
+                            <input type="tel" id="phone-input" name="phone" maxlength="14" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="(555) 000-0000">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Event Date</label>
@@ -99,23 +99,26 @@
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Service Interested In *</label>
                             <select name="service" required class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300">
-                                <option value="">Select a service</option>
-                                <option value="wedding">Wedding Photography</option>
-                                <option value="portrait">Portrait Session</option>
-                                <option value="event">Event Coverage</option>
-                                <option value="engagement">Engagement Shoot</option>
-                                <option value="family">Family Photography</option>
-                                <option value="other">Other</option>
+                                <option value="" disabled selected>Select a service</option>
+                                <option value="Photography">Photography</option>
+                                <option value="Photography & Videography">Photography & Videography</option>
+                                <option value="Portrait Session">Portrait Session</option>
+                                <option value="Event Coverage">Event Coverage</option>
+                                <option value="Decorations">Decorations</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-2">Message *</label>
                             <textarea name="message" required rows="4" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="Tell us about your event and any specific requirements..."></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-red-600 text-white px-8 py-4 rounded-lg hover:bg-red-700 transition-all duration-300 shadow-lg hover:shadow-xl font-semibold">
+                        <button type="submit" class="w-full bg-red-600 text-white px-8 py-4 rounded-lg hover:bg-red-700 transition-all duration-300 shadow-lg hover:shadow-xl font-semibold" id="submit-btn">
                             <i class="fas fa-paper-plane mr-2"></i>
                             Send Message
                         </button>
+                        <div id="form-message" class="mt-4 p-4 rounded-lg hidden" role="alert">
+                            <p id="message-text"></p>
+                        </div>
                         <p class="text-sm text-gray-600">* Required fields</p>
                     </form>
                 </div>
