--- a/index.html
+++ b/index.html
@@ -1043,53 +1043,52 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
                 <!-- Contact Form -->
                 <div data-aos="fade-right">
-                    <form class="space-y-6">
+                    <form class="space-y-6" id="contact-form" method="POST">
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
-                                <label class="block text-sm font-medium mb-2">First Name</label>
-                                <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="John">
+                                <label class="block text-sm font-medium text-gray-700 mb-2">First Name *</label>
+                                <input type="text" name="firstName" required class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white" placeholder="John">
                             </div>
                             <div>
-                                <label class="block text-sm font-medium mb-2">Last Name</label>
-                                <input type="text" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="Doe">
+                                <label class="block text-sm font-medium text-gray-700 mb-2">Last Name *</label>
+                                <input type="text" name="lastName" required class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white" placeholder="Doe">
                             </div>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Email</label>
-                            <input type="email" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="john@example.com">
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Email *</label>
+                            <input type="email" name="email" required class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white" placeholder="john@example.com">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Phone</label>
-                            <input type="tel" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="+1 (555) 000-0000">
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Phone</label>
+                            <input type="tel" id="phone-input" name="phone" maxlength="14" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white" placeholder="(555) 000-0000">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Service Interested In</label>
-                        <!-- Replaced
-                            <select
-                                class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300">
-                                <option>Select a service</option>
-                                <option>Wedding Photography</option>
-                                <option>Portrait Session</option>
-                                <option>Event Coverage</option>
-                                <option>Other</option>
-                            </select>
-                        -->
-                            <select name="service" title="Select a service" aria-label="Select a service"
-                                class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300">
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Event Date</label>
+                            <input type="date" name="eventDate" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Service Interested In *</label>
+                            <select name="service" required title="Select a service" aria-label="Select a service"
+                                class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white">
                                 <option value="" disabled selected>Select a service</option>
-                                <option value="wedding">Wedding Photography</option>
-                                <option value="portrait">Portrait Session</option>
-                                <option value="event">Event Coverage</option>
-                                <option value="other">Other</option>
+                                <option value="Photography">Photography</option>
+                                <option value="Photography & Videography">Photography & Videography</option>
+                                <option value="Portrait Session">Portrait Session</option>
+                                <option value="Event Coverage">Event Coverage</option>
+                                <option value="Decorations">Decorations</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Message</label>
-                            <textarea rows="4" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300" placeholder="Tell us about your event..."></textarea>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Message *</label>
+                            <textarea name="message" required rows="4" class="w-full px-4 py-3 rounded-lg bg-gray-800 border border-gray-700 focus:border-red-600 focus:ring-2 focus:ring-red-600 outline-none transition-all duration-300 text-white" placeholder="Tell us about your event..."></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-red-600 text-white px-8 py-4 rounded-lg hover:bg-red-700 transition-all duration-300 shadow-lg hover:shadow-xl font-semibold">
+                        <button type="submit" class="w-full bg-red-600 text-white px-8 py-4 rounded-lg hover:bg-red-700 transition-all duration-300 shadow-lg hover:shadow-xl font-semibold" id="submit-btn">
                             Send Message
                         </button>
+                        <div id="form-message" class="mt-4 p-4 rounded-lg hidden" role="alert">
+                            <p id="message-text"></p>
+                        </div>
                     </form>
                 </div>
                 
@@ -1215,8 +1214,6 @@
                                 title="Write a Google Review" aria-label="Leave us a review on Google"
                                 class="block w-full bg-gradient-to-r from-red-600 to-red-800 text-white font-bold py-4 px-8 rounded-xl hover:from-red-700 hover:to-red-900 transition-all duration-300 text-center shadow-lg">
                                 <i class="fas fa-edit mr-2"></i> Write a Review
-                            </a>
-                                Write a Review on Google
                             </a>
                             <p class="text-gray-500 text-sm text-center mt-2">Share your experience with us</p>
                         </div>
